--- a/P2.html
+++ b/P2.html
@@ -72,7 +72,7 @@
 
     <div class="slider">
         <input type="range" min="1" max="9" value="$$$GetStorageSpeedDeckA$$$">
-        <a id="a1" href="./P2.html?SetStorageSpeedDeckA=0.1"></a>
+        <!-- <a id="a1" href="./P2.html?SetStorageSpeedDeckA=0.1"></a>
         <a id="a2" href="./P2.html?SetStorageSpeedDeckA=0.3"></a>
         <a id="a3" href="./P2.html?SetStorageSpeedDeckA=0.6"></a>
         <a  id="a4" href="./P2.html?SetStorageSpeedDeckA=0.9"></a>
@@ -80,14 +80,14 @@
         <a id="a6" href="./P2.html?SetStorageSpeedDeckA=2"></a>
         <a id="a7" href="./P2.html?SetStorageSpeedDeckA=3"></a>
         <a  id="a8" href="./P2.html?SetStorageSpeedDeckA=4"></a>
-        <a  id="a9" href="./P2.html?SetStorageSpeedDeckA=5"></a>
+        <a  id="a9" href="./P2.html?SetStorageSpeedDeckA=5"></a> -->
         <!-- <p id="rangeValue">100</p> -->
 
 
         </div>
         <span class="slow">slow</span>
         <span class="fast">fast</span>
-        <span class="random">RANDOM</span>
+        <span id="randomclick" class="random" onclick=random()>RANDOM</span>
 
 
 
@@ -95,7 +95,7 @@
     <span class="v3_281">เมื่อกดตกลงแล้ว ไฟจะเริ่มเล่นตามการตั้งค่าของคุณเป็นเวลา 30 วินาที</span>
     <div class="v3_52"><div class="v3_53"></div><span class="v3_54" onclick="fadeOutAndChangePage()">ตกลง</span></div>
     </div>
-    <!-- <span color="white"></span>current fadetime is $$$GetFadeTime$$$</span>
+    <!-- ทดลอง <span color="white"></span>current fadetime is $$$GetFadeTime$$$</span>
     <span color="white"></span>current Sto is $$$GetStorageDeckA$$$</span>
     <a href="./P2.html?SetStorageDeckA=S11">SetStorageDeckA=S11 seconds</a>
     <a href="./P2.html?SetStorageDeckA=S12">SetStorageDeckA=S12 seconds</a>
