--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html><head>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link href="./css/main.css" rel="stylesheet" /><title>Document</title>
+<html lang="en" id="bd">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Your Page Title</title>
+    <link href="./css/index.css" rel="stylesheet" />
     <script type="text/javascript" src="./java/index.js"></script>
+
 </head>
-<body id="bd">
-    <div class="v3_29">
-    <img class="v3_43" src="./images/Frame.png">
-   
-<div class="v3_52"><div class="v3_53"></div>
-<span id="changepage" class="v3_54" onclick="fadeOutAndChangePage()">กดเพื่อเริ่ม</span></div>
-<span class="v3_58" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-</span></div></body></html>
+<body id="bd" >
+    <!-- <div class="BG" ><img  src="./css/SiamPiwat/allBG.png"></div>  -->
+    <div class="clickforstart" onclick=fadeOutAndChangePage()><img  src="./css/SiamPiwat/clickforstart.png"></div>
+    <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
+</body>
+</html>
