--- a/P2.html
+++ b/P2.html
@@ -20,7 +20,7 @@
     <meta http-equiv="pragma" content="no-index" />
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="java/tailwin.js"></script>
   </head>
   <body id="bd2">
     <div class="flex justify-center">
