--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>Your Page Title</title>
     <link href="./css/index.css" rel="stylesheet" />
     <script type="text/javascript" src="./java/index.js"></script>
+    <script src="java/tailwin.js"></script>
 
 </head>
 <body id="bd" >
-    <!-- <div class="BG" ><img  src="./css/SiamPiwat/allBG.png"></div>  -->
-    <div class="clickforstart" onclick=fadeOutAndChangePage()><img  src="./css/SiamPiwat/clickforstart.png"></div>
+    <div class="lefttop w-1/6 m-12	" ><img  src="/images/livescape.png"></div> 
+    <div class="middle  flex justify-center mt-20 mb" ><img  src="/images/bdwlogo.png"></div> 
+    <div class="clickforstart flex justify-center  mt-20" onclick=fadeOutAndChangePage()><img  src="./css/SiamPiwat/clickforstart.png"></div>
     <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
 </body>
 </html>
