--- a/count.html
+++ b/count.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/Count.css">
   <script type="text/javascript" src="./java/CountJava.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
   <title>Countdown Timer</title>
 </head>
 <body id="bd3">
@@ -20,17 +21,17 @@
             d="
               M 50, 50
               m -45, 0
-              a 45,45 0 1,0 90,0
-              a 45,45 0 1,0 -90,0
+              a 45,45 0 1,1 90,0
+              a 45,45 0 1,1 -90,0
             "
           ></path>
         </g>
       </svg>
-      <span id="base-timer-label" class="base-timer__label">
-      </span>
+      <div id="base-timer-label" class="base-timer__label flex justify-center">
+      </div>
     </div>
-    <span class="thank">THANK YOU</span>
-    <div class="v3_52"><div class="v3_53"></div><span class="v3_54" onclick=fadeOutAndChangePage()>ย้อนกลับ</span></div>
+    <div class="thank">THANK YOU</div>
+    <img class="flex justify-center" src="./images/Back.png" onclick="fadeOutAndChangePage()">
     </div>
 </body>
 </html>
