--- a/P2.html
+++ b/P2.html
@@ -112,7 +112,7 @@
       </div>
 
       <div class="v3_202">ทิศทางที่คุณเลือก / Your lighting direction result :</div>
-      <div class="directionresult">
+      <div class="directionresult flex justify-center">
       <div class="square-image2"><img src="./images/directdeac/active/act1.png"/></div>
       <div class="square-image2"><img src="./images/directdeac/active/act1.png"/></div>
       <div class="square-image2"><img src="./images/directdeac/active/act1.png"/></div>
