--- a/count.html
+++ b/count.html
@@ -9,10 +9,14 @@
   <title>Countdown Timer</title>
 </head>
 <body id="bd3">
-  <div id="app">
+  <div class="flex justify-center">
+    <img class="imghlab" src="./images/logoclient.png" />
+      </div>
+  <div class="flex justify-center">
+  
     <div class="base-timer">
-      <svg class="base-timer__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-        <g class="base-timer__circle">
+      <svg class="base-timer__svg " viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+        <g class="base-timer__circle ">
           <circle class="base-timer__path-elapsed" cx="50" cy="50" r="45"></circle>
           <path
             id="base-timer-path-remaining"
@@ -27,11 +31,15 @@
           ></path>
         </g>
       </svg>
-      <div id="base-timer-label" class="base-timer__label flex justify-center">
+      
+    </div></div>
+    <div id="base-timer-label" class="base-timer__label flex justify-center">
       </div>
-    </div>
-    <div class="thank">THANK YOU</div>
-    <img class="flex justify-center" src="./images/Back.png" onclick="fadeOutAndChangePage()">
-    </div>
+      <div class="sec flex justify-center"> sec
+      </div>
+    <div class="thank flex justify-center">THANK YOU</div>
+    <div class=".comfirmimg flex justify-center"><img src="./images/Back.png" onclick=fadeOutAndChangePage()></div>
+    
+    <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
 </body>
 </html>
