--- a/count.html
+++ b/count.html
@@ -33,7 +33,7 @@
       </svg>
       
     </div></div>
-    <div id="base-timer-label" class="base-timer__label flex justify-center">
+    <div id="base-timer-label" class="base-timer__label flex justify-center">00
       </div>
       <div class="sec flex justify-center"> sec
       </div>
