--- a/P2.html
+++ b/P2.html
@@ -38,31 +38,56 @@
       <div class="v3_59 flex justify-center">
         <div class="button-container">
           <a  href="./P2.html?SetStorageDeckA=S1"
-            ><div id="p1" background="blue" class="button" onclick="p1click()">Palette 1</div></a
+            ><div id="p1" class="button" onclick="p1click()"><img src="./images/palette/Group 44.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S2"
-            ><div id="p2" class="button" onclick="p2click()">Palette 2</div></a
+            ><div id="p2" class="button" onclick="p2click()"><img src="./images/palette/Group 81.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S3"
-            ><div id="p3" class="button" onclick="p3click()">Palette 3</div></a
+            ><div id="p3" class="button" onclick="p3click()"><img src="./images/palette/Group 82.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S4"
-            ><div id="p4" class="button" onclick="p4click()">Palette 4</div></a
+            ><div id="p4" class="button" onclick="p4click()"><img src="./images/palette/Group 83.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S5"
-            ><div id="p5" class="button" onclick="p5click()">Palette 5</div></a
+            ><div id="p5" class="button" onclick="p5click()"><img src="./images/palette/Group 84.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S6"
-            ><div id="p6" class="button" onclick="p6click()">Palette 6</div></a
+            ><div id="p6" class="button" onclick="p6click()"><img src="./images/palette/Group 85.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S7"
-            ><div id="p7" class="button" onclick="p7click()">Palette 7</div></a
+            ><div id="p7" class="button" onclick="p7click()"><img src="./images/palette/Group 86.png"/></div></a
           >
           <a href="./P2.html?SetStorageDeckA=S8"
-            ><div id="p8" class="button" onclick="p8click()">Palette 8</div></a
+            ><div id="p8" class="button" onclick="p8click()"><img src="./images/palette/Group 87.png"/></div></a
+          >
+          <a  href="./P2.html?SetStorageDeckA=S9"
+            ><div id="p9" class="button" onclick="p9click()"><img src="./images/palette/Group 88.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S10"
+            ><div id="p10" class="button" onclick="p10click()"><img src="./images/palette/Group 89.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S11"
+            ><div id="p11" class="button" onclick="p11click()"><img src="./images/palette/Group 90.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S12"
+            ><div id="p12" class="button" onclick="p12click()"><img src="./images/palette/Group 91.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S13"
+            ><div id="p13" class="button" onclick="p13click()"><img src="./images/palette/Group 92.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S14"
+            ><div id="p14" class="button" onclick="p14click()"><img src="./images/palette/Group 93.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S15"
+            ><div id="p15" class="button" onclick="p15click()"><img src="./images/palette/Group 94.png"/></div></a
+          >
+          <a href="./P2.html?SetStorageDeckA=S16"
+            ><div id="p16" class="button" onclick="p16click()"><img src="./images/palette/Group 95.png"/></div></a
           >
         </div>
       </div>
+      
 
       <hr>
       <div class="choosecolor"
