--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Your Page Title</title>
+    <!-- --------------------------------------------dec--------------------->
     <link href="./css/index.css" rel="stylesheet" />
+    <!-- --------------------------------------------java--------------------->
     <script type="text/javascript" src="./java/index.js"></script>
     <script src="java/tailwin.js"></script>
+    <!------------------------------------------------------ apple fullscreen ------------------------------------------->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <!------------------------------------------------------Title ------------------------------------------->
+    <title>Your Page Title</title>
 
 </head>
 <body id="bd" >
