--- a/count.html
+++ b/count.html
@@ -35,7 +35,7 @@
     </div></div>
     <div id="base-timer-label" class="base-timer__label flex justify-center">00
       </div>
-      <div class="sec flex justify-center"> sec
+      <div class="sec flex justify-center"> Sec
       </div>
     <div class="thank flex justify-center">THANK YOU</div>
     <div class=".comfirmimg flex justify-center"><img src="./images/Back.png" onclick=fadeOutAndChangePage()></div>
