--- a/P2.html
+++ b/P2.html
@@ -159,7 +159,7 @@ var goFS = document.getElementById('goFS');goFS.addEventListener(
   false,);
   </script> -->
 
-        <div class="comfirmimg flex justify-center" onclick="submitme()"><img src="./images/confirm.png"></div>
+        <div class="comfirmimg flex justify-center" onclick="X()"><img src="./images/confirm.png"></div>
         <div class="iconbar flex justify-center"><img  src="./css/SiamPiwat/siamicon.png"></div>
 
     </div>
@@ -172,11 +172,7 @@ var goFS = document.getElementById('goFS');goFS.addEventListener(
   const queryString = window.location.search;
   const urlParams = new URLSearchParams(queryString);
   var Cspeed = urlParams.get('SetStorageSpeedDeckA')
-
-
-  var Cpattern = urlParams.get('')
-
-
+  var Cpattern = urlParams.get('pattern')
   var Ccolor = urlParams.get('color')
 
 
@@ -189,6 +185,12 @@ var goFS = document.getElementById('goFS');goFS.addEventListener(
   console.log("speed " + Cspeed);
   console.log("pattern " +Cpattern);
   console.log("color " + Ccolor);
+
+
+
+
+
+
 
 function clickC(num){
     Ccolor = num; 
@@ -209,17 +211,16 @@ function clickS(num){
 }
 
 function submitme(){
+
   const xhr = new XMLHttpRequest();
   const targetPage = "./P2.html";
   const storage = Ccolor;
   const place = Cpattern;  
-  const speed = Cspeed;    
-  console.log("f")
-  // xhr.open("GET", targetPage);
-  // xhr.onload = function () { window.location.href = `${targetPage}?SetStorageDeckA=S${storage}P${place}&SetStorageSpeedDeckA=${speed}&pattern=${place}&color=${storage}`; };
-  // xhr.send();
+  const speed = Cspeed;
+  resetting(Ccolor,Cpattern,Cspeed)
   var url = `http://127.0.0.1/P2.html?SetStorageDeckA=S${storage}P${place}&SetStorageSpeedDeckA=${speed}&pattern=${place}&color=${storage}`;
   console.log(url)
+
   fetch(url).then(function(response) {
   return response;
   }).then(function(data) {
@@ -227,7 +228,18 @@ function submitme(){
   }).catch(function(err) {
     console.log('Fetch Error :-S', err);
   });
+}
+function resetting(color,pattern,speed){
+  for (let i = 1; i <= 16; i++) {
+    document.getElementById("p"+i).classList.remove("choosing");
+  }
+  document.getElementById("p"+color).classList.add("choosing");
 
+
+  for (let i = 1; i <= 8; i++) {
+    document.getElementById("direction"+i).classList.remove("choosing");
+  }
+  document.getElementById("direction"+pattern).classList.add("choosing");
 
 }
 
