--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body id="bd" >
     <div class="lefttop w-1/6 m-12	" ><img  src="/images/livescape.png"></div> 
     <div class="middle  flex justify-center mt-20 mb" ><img  src="/images/bdwlogo.png"></div> 
-    <div class="clickforstart flex justify-center  mt-20" onclick=fadeOutAndChangePage()><img  src="./css/SiamPiwat/clickforstart.png"></div>
+    <div class="comfirmimg flex justify-center  mt-20"  onpointerdown=buttonDown() onpointerup=buttonUp() ><img  src="./css/SiamPiwat/clickforstart.png"></div>
     <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
 </body>
 </html>
