--- a/count.html
+++ b/count.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="./css/Count.css">
   <script type="text/javascript" src="./java/CountJava.js"></script>
   <script src="https://cdn.tailwindcss.com"></script>
-  <title>Countdown Timer</title>
+     <!------------------------------------------------------ apple fullscreen ------------------------------------------->
+     <meta name="apple-mobile-web-app-capable" content="yes" />
+     <meta name="mobile-web-app-capable" content="yes" />
+     <!------------------------------------------------------Title ------------------------------------------->
+     <title>SiamPiwat</title>
 </head>
 <body id="bd3">
   <div class="flex justify-center">
