--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
     <!------------------------------------------------------Title ------------------------------------------->
-    <title>Your Page Title</title>
+    <title>SiamPiwat</title>
 
 </head>
 <body id="bd" >
