--- a/P2.html
+++ b/P2.html
@@ -119,7 +119,7 @@
 
       <hr>
       <div class="choosecolor"
-        >เลือกความเร็ว</div>
+        >3. เลือกความเร็ว / Select Speeds</div>
       <hr>
 
       <main class="maininput">
@@ -129,8 +129,8 @@
       </main>
 
       <div class="maininput">
-        <div class="slow">slow</div>
-        <div class="fast">fast</div>
+        <div class="slow">Slow</div>
+        <div class="fast">Fast</div>
       </div>
 
      
