--- a/count.html
+++ b/count.html
@@ -37,12 +37,12 @@
       </svg>
       
     </div></div>
-    <div id="base-timer-label" class="base-timer__label flex justify-center">00
+    <div id="base-timer-label" class="base-timer__label flex justify-center">30
       </div>
       <div class="sec flex justify-center"> Sec
       </div>
     <div class="thank flex justify-center">THANK YOU</div>
-    <div class="comfirmimg flex justify-center" onpointerdown=buttonDown() onpointerup=buttonUp()><img src="./images/Back.png" onclick=fadeOutAndChangePage()></div>
+    <div class="comfirmimg flex justify-center" onpointerdown=buttonDown() onpointerup=buttonUp()><img src="./images/Back.png"></div>
     
     <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
 </body>
