--- a/P2.html
+++ b/P2.html
@@ -125,7 +125,7 @@
       <main class="maininput">
 
         <input type="range" min="1" max="10" oninput="updateOnClick(this.value)" />
-        <a id="clickLink" ontouchend="autoClick()">Click</a>
+        <a id="clickLink" ontouchend="autoClick()"></a>
 
       </main>
 
