--- a/P2.html
+++ b/P2.html
@@ -20,6 +20,7 @@
     <meta http-equiv="pragma" content="no-cache" />
     <meta http-equiv="cache-control" content="no-cache" />
     <meta display-mode="fullscreen"/>
+    <meta http-equiv="X-Frame-Options" content="deny">
     <!------------------------------------------------------ title ------------------------------------------->
     <title>SiamPiwat</title>
     <!------------------------------------------------------ fullscreen ------------------------------------------->
@@ -201,7 +202,8 @@ function submitme(){
   const speed = Cspeed;
   resetting(Ccolor,Cpattern,Cspeed)
   //var url = `http://127.0.0.1/P2.html?SetStorageDeckA=S${storage}P${place}&SetStorageSpeedDeckA=${speed}&pattern=${place}&color=${storage}`;
-  var url = `http://192.168.1.220/P2.html?SetStorageDeckA=S${storage}P${place}&SetStorageSpeedDeckA=${speed}&pattern=${place}&color=${storage}`;
+  //var url = `http://192.168.1.220/P2.html?SetStorageDeckA=S${storage}P${place}&SetStorageSpeedDeckA=${speed}&pattern=${place}&color=${storage}`;
+  var url = `http://169.254.124.209/P2.html?SetStorageDeckA=S${storage}P${place}&SetStorageSpeedDeckA=${speed}&pattern=${place}&color=${storage}`;
   console.log(url)
 
   fetch(url).then(function(response) {
@@ -242,4 +244,32 @@ function resetting(color,pattern,speed){
 }
 
 </script> 
+<script>
+  document.addEventListener('touchmove', function (e) {
+      e.preventDefault();
+  });
+
+  var hiddenTime = 0;
+    
+    document.addEventListener("visibilitychange", function() {
+        if (document.hidden) {
+            // ถ้าเอกสารถูกซ่อน (ย่อแล้ว)
+            hiddenTime = Date.now();
+        } else {
+            // ถ้าเอกสารปรากฏอยู่ (แทปถูกเปลี่ยน)
+            var currentTime = Date.now();
+            var elapsedTime = currentTime - hiddenTime;
+            
+            // ตรวจสอบว่าเวลาที่ถูกซ่อนน้อยกว่าเวลาที่กำหนด
+            if (elapsedTime < 1000) { // ในที่นี้ใช้ 1000 มิลลิวินาที (1 วินาที) เป็นตัวอย่าง
+                // ป้องกันการเปลี่ยนแทปหรือการย่อแล้ว
+                document.addEventListener("visibilitychange", function() {
+                    if (document.hidden) {
+                        document.location.href = "about:blank";
+                    }
+                });
+            }
+        }
+    });
+</script>
 </html>
