--- a/P2.html
+++ b/P2.html
@@ -139,7 +139,7 @@
  
 
 
-        <div class="comfirmimg flex justify-center" onclick=submitme() onpointerdown=buttonDown() onpointerup=buttonUp()><img src="./images/confirm.png"></div>
+        <div class="comfirmimg flex justify-center"><img src="./images/confirm.png"  onclick=submitme() onpointerdown=buttonDown() onpointerup=buttonUp()></div>
 
  
     </div>
