--- a/count.html
+++ b/count.html
@@ -56,7 +56,7 @@
       <div class="sec flex justify-center"> Sec
       </div>
     <div class="thank flex justify-center">THANK YOU</div>
-    <div class="comfirmimg flex justify-center" onpointerdown=buttonDown() onpointerup=buttonUp()><img src="./images/Back.png"></div>
+    <div class="comfirmimg flex justify-center"><img src="./images/Back.png" onpointerdown=buttonDown() onpointerup=buttonUp()></div>
     
     <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
 </body>
