--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 <body id="bd" >
     <div class="lefttop w-1/6 m-12	" ><img  src="/images/livescape.png"></div> 
     <div class="middle  flex justify-center mt-20 mb logo" ><img  src="/images/bdwlogo.png"></div> 
-    <div class="comfirmimg flex justify-center  mt-20"  onpointerdown=buttonDown() onpointerup=buttonUp() ><img  src="./css/SiamPiwat/clickforstart.png"></div>
+    <div class="comfirmimg flex justify-center  mt-20" ><img  src="./css/SiamPiwat/clickforstart.png" onpointerdown=buttonDown() onpointerup=buttonUp() ></div>
     <div class="iconbar"><img  src="./css/SiamPiwat/siamicon.png"></div>
+    <div id="randomscence"></div>
 
 </body>
 <script>
